# autocommit

./: Cargo.toml  LICENSE  README.md  config-example.json  config.json
.github/workflows/: release.yml
src/: main.rs
